# spine-segmentation-project

./: CMakeLists.txt  README.md
SpineSeg/: SpineSeg.py
